# TutorialQtLinguist

./: CMakeLists.txt  Readme.md  holaMundoQt_en_US.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
docs/: TutorialQtLinguist.md
